package com.sejong.metaservice.support.common.enums;

public enum PostType {
    NEWS,
    PROJECT,
    DOCUMENT,
    ARTICLE
    ;
}
